[gd_scene load_steps=3 format=3 uid="uid://xufkv732olqj"]

[ext_resource type="Theme" uid="uid://c82hckfvt0rn" path="res://buttons_theme.tres" id="1_v14qn"]
[ext_resource type="Script" path="res://numpad.gd" id="2_bm5hp"]

[node name="Numpad" type="GridContainer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.383
offset_right = -1044.0
offset_bottom = -752.184
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_v14qn")
columns = 3
script = ExtResource("2_bm5hp")

[node name="Btn7" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "7"

[node name="Btn8" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8"

[node name="Btn9" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9"

[node name="Btn4" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[node name="Btn5" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"

[node name="Btn6" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6"

[node name="Btn1" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="Btn2" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2"

[node name="Btn3" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="Blank" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true

[node name="Btn0" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"

[node name="BtnA" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "A"
